Updated delete message function

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /client_secret_501474659273-h9iu2s4hpnlvte8isi6t2o38kit7lc4r.apps.googleusercontent.com.json
 /token.pickle
+client_secret_501474659273-h6dkoko9nbuv9vdlcd2embcos6ct0a7t.apps.googleusercontent.com.json
